<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/AddNewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinearInput"
        android:layout_below="@+id/textView"
        android:paddingBottom="20dp"
        >


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/CounterNameHint"
        android:id="@+id/NameCounter"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"  />



    <Button
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        android:id="@+id/button"
        android:onClick="startService"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

        <EditText
            android:id="@+id/secondsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/button"
            android:layout_toStartOf="@+id/button"
            android:hint="SS "
            android:inputType="number"
            android:textSize="20sp"


            />

        <EditText
            android:id="@+id/minutesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/secondsText"
            android:layout_toStartOf="@+id/secondsText"
            android:hint="MM"
            android:inputType="number"

            android:textSize="20sp"

            />

        <EditText
            android:id="@+id/hoursText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/minutesText"
            android:layout_toStartOf="@+id/minutesText"
            android:hint="HH "
            android:inputType="number"
            android:textSize="20sp"


            />






    </RelativeLayout>

    <!-- here need a text saying your counters:
     also need like a row of layouts, name and time -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/YourTimers"
        android:layout_below="@id/LinearInput"
        android:id="@+id/YourCounters"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:padding="10dp"

        />



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/YourCounters" >


        <TextView
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1."
            android:textSize="25sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/Number"/>

        <TextView
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/DefaultCounterName"
            android:id="@+id/counterName"
            android:layout_toRightOf="@id/Number"
            android:layout_toEndOf="@+id/Number"


            />





    <Button
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/stopButton"
        android:text="Stop"
        android:onClick="stopService"


        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zeroTime"
            android:id="@+id/counterTextView"
            android:textSize="25sp"
            android:paddingTop="10dp"

            android:layout_toLeftOf="@id/stopButton"


            />


    </RelativeLayout>

</RelativeLayout>
